[gd_scene load_steps=2 format=3 uid="uid://etrw33s6ro06"]

[ext_resource type="Script" uid="uid://c3qpdu3rnsaeg" path="res://scripts/battle.gd" id="1_dn72j"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dn72j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlayerInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "玩家信息"

[node name="EnemyInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "敌人信息"

[node name="BattleLog" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "战斗开始..."
editable = false

[node name="AttackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "攻击"

[connection signal="pressed" from="VBoxContainer/AttackButton" to="." method="_on_attack_button_pressed"]
